# hindsight

./: .dockerignore  .gitignore  Makefile  README.md  build-output.txt  cabal.project  cabal.project.ci  cabal.project.freeze  check-client-api.js  flake.nix  generate-module-graph.sh  grpc-design.md  quine.hs  test-atomic-batch.js  test-grpc.js  test-multi-stream-metadata.js  test-v1-v2-interop.js  test-v2-custom-metadata.js  test-v2-exact-revision.js  test-v2-raw-error.js  test-v2-response.js  test-v2-version-mismatch.js  test-v2-version.js  test-version-mismatch.js  validate-kurrentdb.js  weeder.toml
examples/long-running-subscription/: .dockerignore  Dockerfile.ghc-9.10  Dockerfile.ghc-9.12  README.md  cabal.project  cabal.project.docker  docker-compose.yml  long-running-subscription.cabal  test-api.sh  update-commit.sh
examples/long-running-subscription/src/: Main.hs
hindsight/: RACE-ANALYSIS.md  README.md  benchmark-report.html  hindsight.cabal  introduction.lhs  postgresql-performance.df  postgresql-performance.md
hindsight-benchmarks/: hindsight-benchmarks.cabal
hindsight-benchmarks/bench/: Main.hs
hindsight-benchmarks/bench-v2/: Main.hs
hindsight-benchmarks/bench-v2/Analysis/: CSV.hs
hindsight-benchmarks/bench-v2/Backends/: Common.hs
hindsight-benchmarks/bench-v2/Backends/PostgreSQL/: Specific.hs
hindsight-benchmarks/bench-v2/Core/: Metrics.hs  Types.hs
hindsight-benchmarks/bench-v2/Scenarios/: Concurrency.hs  Concurrency.hs.bak  Insertion.hs  Insertion.hs.bak  Scaling.hs
hindsight-benchmarks/bench-v2/scripts/: analyze.R
hindsight-benchmarks/bench/Bench/: CSVReporter.hs  Common.hs  ConcurrencyBenchmarks.hs  PostgreSQLOptimized.hs  PostgreSQLPerformance.hs  ScaleBenchmarks.hs  Simple.hs
hindsight-core/: CHANGELOG.md  README.md  hindsight-core.cabal
hindsight-core/event-examples-lib/Test/Hindsight/: Examples.hs  Instances.hs
hindsight-core/event-test-lib/Test/Hindsight/: Examples.hs  Generate.hs
hindsight-core/golden/events/user_created/: 1.json  2.json
hindsight-core/src/: Hindsight.hs
hindsight-core/src/Hindsight/: Events.hs  Store.hs
hindsight-core/src/Hindsight/Events/Internal/: TypeLevel.hs  Versioning.hs
hindsight-core/src/Hindsight/Store/: Parsing.hs
hindsight-core/test/: Main.hs
hindsight-core/test-lib/Test/Hindsight/: Store.hs
hindsight-core/test-lib/Test/Hindsight/Store/: BasicTests.hs  Common.hs  ConsistencyTests.hs  CursorTests.hs  MultiInstanceEventOrderingTests.hs  OrderingTests.hs  PropertyTests.hs  StreamVersionTests.hs  StressTests.hs  TestRunner.hs
hindsight-core/test/Test/: Hindsight.hs
hindsight-core/test/Test/Hindsight/: EventTests.hs  Examples.hs
hindsight-core/test/golden/: user-created-v0.json  user-created-v2.json
hindsight-filesystem-store/: README.md  hindsight-filesystem-store.cabal
hindsight-filesystem-store/src/Hindsight/Store/: Filesystem.hs
hindsight-filesystem-store/test/: Main.hs
hindsight-filesystem-store/test/Test/Hindsight/Store/: Filesystem.hs
hindsight-kurrentdb-store/: README.md  docker-compose.yml  hindsight-kurrentdb-store.cabal  test-db.sh
hindsight-kurrentdb-store/proto/v2/: streams.proto
hindsight-kurrentdb-store/src/Hindsight/Store/: KurrentDB.hs
hindsight-kurrentdb-store/src/Hindsight/Store/KurrentDB/: Client.hs  RPC.hs  Subscription.hs  Types.hs
hindsight-kurrentdb-store/src/Proto/: Code.hs  Code_Fields.hs  Shared.hs  Shared_Fields.hs  Status.hs  Status_Fields.hs  Streams.hs  Streams_Fields.hs
hindsight-kurrentdb-store/test/: AppendTest.hs  ConnectivityTest.hs  Main.hs  MinimalReadTest.hs  SubscriptionTest.hs
hindsight-memory-store/: README.md  hindsight-memory-store.cabal
hindsight-memory-store/src/Hindsight/Store/: Memory.hs
hindsight-memory-store/test/: Main.hs
hindsight-postgresql-projections/: README.md  hindsight-postgresql-projections.cabal
hindsight-postgresql-projections/sql/: projection-schema.sql
hindsight-postgresql-projections/src/Hindsight/: Projection.hs
hindsight-postgresql-projections/src/Hindsight/Projection/: Common.hs  Error.hs  Matching.hs  Schema.hs  State.hs
hindsight-postgresql-projections/test/: Main.hs
hindsight-postgresql-projections/test/Test/Hindsight/: Projection.hs
hindsight-postgresql-store/: LICENSE  README.md  hindsight-postgresql-store.cabal
hindsight-postgresql-store/sql/: sql-store-schema.sql
hindsight-postgresql-store/src/Hindsight/: Projection.hs.extracted
hindsight-postgresql-store/src/Hindsight/Projection.extracted/: Common.hs
hindsight-postgresql-store/src/Hindsight/Store/: PostgreSQL.hs
hindsight-postgresql-store/test/: Main.hs
hindsight-postgresql-store/test/Test/Hindsight/: SyncProjection.hs  SyncProjection.hs.bak
hindsight-tutorials/: hindsight-tutorials.cabal
hindsight-tutorials/tutorials/: 01-getting-started.lhs  02-in-memory-projections.lhs  03-postgresql-projections.lhs  04-event-versioning.lhs  05-consistency-patterns.lhs  06-backend-agnostic.lhs  07-advanced-postgresql.lhs  07-synchronous-projections.lhs  08-multi-stream-consistency.lhs
hindsight/golden/events/user_created/: 1.json
hindsight/scripts/: analyze-benchmarks.R  run-perf-benchmark.sh  run-scale-benchmark.sh
hindsight/sql/: sql-store-schema.sql
hindsight/src/: Hindsight.hs
hindsight/src/Hindsight/: Core.hs  CoreRedesign.hs  Store.hs  TH.hs  Tracing.hs
hindsight/src/Hindsight/Examples/: UserCreated.hs
hindsight/src/Hindsight/Store/: Parsing.hs
hindsight/src/Hindsight/Tracing/: Location.hs
hindsight/test-lib/Test/Hindsight/: Examples.hs  Generate.hs
hindsight/test/Test/: Hindsight.hs
hindsight/test/golden/: user-created-v1.json
tmp-kurrentdb/: tmp-kurrentdb.cabal
tmp-kurrentdb/src/Test/KurrentDB/: Tmp.hs
tmp-kurrentdb/test/: SimpleTest.hs
website/: CNAME  README.md  cabal.project.local  result  site.cabal  site.hs
website/content/: about.md  index.md
website/content/posts/: announcing-hindsight.md  composing-event-migrations-with-default-implementations.md
website/css/: style.css
website/js/: carousel.js
website/templates/: default.html  post-list.html  post.html
(+60 files in other folders)
