cabal-version:      3.4
name:               hindsight-benchmarks
version:            0.1.0.0
synopsis:           Benchmarks for the Hindsight event sourcing library
description:
    Benchmark suites for testing Hindsight performance across different storage
    backends (Memory, Filesystem, PostgreSQL). Includes both Criterion-based
    benchmarks and custom CSV-based scaling benchmarks.
license:            NONE
author:             Gaël Deest
maintainer:         gael.deest@franbec.org
category:           Web
build-type:         Simple

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -Wunused-packages

common opts
    ghc-options: -O

benchmark hindsight-benchmarks
    import:           warnings, opts
    default-language: GHC2021
    ghc-options:      -threaded -rtsopts
    type:             exitcode-stdio-1.0
    hs-source-dirs:   bench
    main-is:          Main.hs
    other-modules:    Bench.Simple, Bench.Common, Bench.PostgreSQLOptimized, Bench.ConcurrencyBenchmarks, Bench.PostgreSQLPerformance, Bench.CSVReporter, Bench.ScaleBenchmarks
    build-depends:
        base,
        aeson,
        async,
        bytestring,
        cassava,
        containers,
        criterion,
        deepseq,
        directory,
        filepath,
        hasql,
        hasql-pool,
        hasql-transaction,
        hindsight,
        hindsight-memory-store,
        hindsight-filesystem-store,
        hindsight-postgresql-store,
        random,
        stm,
        temporary,
        text,
        time,
        tmp-postgres,
        unix,
        unliftio,
        uuid,
        vector

executable hindsight-bench-v2
    import:           warnings, opts
    default-language: GHC2021
    ghc-options:      -threaded -rtsopts
    hs-source-dirs:   bench-v2
    main-is:          Main.hs
    other-modules:    Core.Types, Core.Metrics, Backends.Common, Backends.PostgreSQL.Specific, Scenarios.Insertion, Scenarios.Scaling, Scenarios.Concurrency, Analysis.CSV
    build-depends:
        base,
        aeson,
        async,
        bytestring,
        cassava,
        containers,
        criterion,
        deepseq,
        directory,
        filepath,
        hasql-pool,
        hindsight,
        hindsight-memory-store,
        hindsight-filesystem-store,
        hindsight-postgresql-store,
        text,
        time,
        tmp-postgres,
        unix,
        uuid,
        vector
