cabal-version:      3.4
name:               hindsight-core
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Gaël Deest
maintainer:         gael.deest@franbec.org
copyright:          (c) 2025 Gaël Deest
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files:
    golden/**/*.json
    test/golden/**/*.json

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -Wunused-packages

common opts
    ghc-options: -O

library
    import:           warnings, opts
    exposed-modules:  Hindsight,
                      Hindsight.Events,
                      Hindsight.Events.Internal.TypeLevel,
                      Hindsight.Events.Internal.Versioning,
                      Hindsight.Store,
                      Hindsight.Store.Parsing
    -- other-modules:
    -- other-extensions:
    build-depends:    base >= 4.20.1 && < 5,
                      aeson >= 2.2.3 && < 2.3,
                      containers >= 0.7 && < 0.9,
                      text >= 2.1.2 && < 2.2,
                      time >= 1.12.2 && < 1.13,
                      uuid >= 1.3.16 && < 1.4
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions: OverloadedRecordDot, DataKinds, DuplicateRecordFields, StrictData, Strict, RequiredTypeArguments

-- Internal library for event testing utilities
library event-testing
    import:           warnings, opts
    visibility:       public
    exposed-modules:  Test.Hindsight.Generate,
                      Test.Hindsight.Examples
    build-depends:    base >= 4.20.1 && < 5,
                      aeson >= 2.2.3 && < 2.3,
                      aeson-pretty >= 0.8.10 && < 0.9,
                      bytestring >= 0.12.2 && < 0.13,
                      filepath >= 1.5.4 && < 1.6,
                      hindsight-core,
                      QuickCheck >= 2.14 && < 2.17,
                      tasty >= 1.5.3 && < 1.6,
                      tasty-golden >= 2.3.5 && < 2.4,
                      tasty-quickcheck >= 0.11.1 && < 0.12,
                      text >= 2.1.2 && < 2.2
    hs-source-dirs:   event-test-lib
    default-language: GHC2021
    default-extensions: OverloadedRecordDot, DataKinds, DuplicateRecordFields, StrictData, Strict, RequiredTypeArguments

-- Internal library for store testing utilities
library store-testing
    import:           warnings, opts
    visibility:       public
    exposed-modules:  Test.Hindsight.Store.Common,
                      Test.Hindsight.Store.TestRunner,
                      Test.Hindsight.Store.StressTests,
                      Test.Hindsight.Store.PropertyTests,
                      Test.Hindsight.Store.OrderingTests
    build-depends:    base >= 4.20.1 && < 5,
                      aeson >= 2.2.3 && < 2.3,
                      async >= 2.2.5 && < 2.3,
                      containers >= 0.7 && < 0.9,
                      hedgehog >= 1.5 && < 1.8,
                      hindsight-core,
                      hindsight-core:event-testing,
                      QuickCheck >= 2.14 && < 2.17,
                      quickcheck-instances >= 0.3.33 && < 0.4,
                      random >= 1.2 && < 1.4,
                      stm >= 2.5.3 && < 2.6,
                      tasty >= 1.5.3 && < 1.6,
                      tasty-hedgehog >= 1.4.0 && < 1.5,
                      tasty-hunit >= 0.10.2 && < 0.11,
                      text >= 2.1.2 && < 2.2,
                      time >= 1.12.2 && < 1.13,
                      unliftio >= 0.2.25 && < 0.3,
                      uuid >= 1.3.16 && < 1.4
    hs-source-dirs:   test-lib
    default-language: GHC2021
    default-extensions: OverloadedRecordDot, DataKinds, DuplicateRecordFields, StrictData, Strict, RequiredTypeArguments

test-suite hindsight-test
    import:           warnings, opts
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    ghc-options:      -threaded -rtsopts
    other-modules:    Test.Hindsight
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base,
        hindsight-core:event-testing,
        tasty