cabal-version:      3.8
name:               hindsight-filesystem-store
version:            0.1.0.0
synopsis:           Filesystem event store for Hindsight
description:        File-based persistent event store with multi-process support. Suitable for single-node deployments where durability is needed without a database dependency.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Gaël Deest
maintainer:         gael@hindsight.events
copyright:          (c) 2025 Gaël Deest
category:           Web
build-type:         Simple

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -Wunused-packages

common opts
    ghc-options: -O

library
    import:           warnings, opts
    exposed-modules:  Hindsight.Store.Filesystem
    build-depends:    base >= 4.20.1 && < 5,
                      aeson >= 2.2.3 && < 2.3,
                      async >= 2.2.5 && < 2.3,
                      bytestring >= 0.12.2 && < 0.13,
                      containers >= 0.7 && < 0.9,
                      directory >= 1.3.8 && < 1.4,
                      filelock >= 0.1.1 && < 0.2,
                      filepath >= 1.5.4 && < 1.6,
                      fsnotify >= 0.4.4 && < 0.5,
                      hindsight-core >= 0.1.0 && < 0.2,
                      hindsight-memory-store >= 0.1.0 && < 0.2,
                      stm >= 2.5.3 && < 2.6,
                      text >= 2.1.2 && < 2.2,
                      time >= 1.12.2 && < 1.13,
                      unliftio >= 0.2.25 && < 0.3,
                      uuid >= 1.3.16 && < 1.4
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions: OverloadedRecordDot, DataKinds, DuplicateRecordFields, StrictData, Strict, RequiredTypeArguments

test-suite hindsight-filesystem-store-test
    import:           warnings, opts
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    ghc-options:      -threaded -rtsopts
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    Test.Hindsight.Store.Filesystem
    build-depends:
        base,
        aeson,
        bytestring,
        containers,
        directory,
        filelock,
        hindsight-core,
        hindsight-core:event-examples,
        hindsight-filesystem-store,
        hindsight-memory-store,
        hindsight-core:store-testing,
        tasty,
        tasty-hunit,
        temporary,
        unix,
        unliftio,
        uuid
