cabal-version:      3.4
name:               hindsight-memory-store
version:            0.1.0.0
synopsis:           In-memory event store for Hindsight
description:        In-memory implementation of event store using STM. Data is lost on process termination. Suitable for testing and development.
license:            NONE
author:             Gaël Deest
maintainer:         gael.deest@franbec.org
category:           Web
build-type:         Simple

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -Wunused-packages

common opts
    ghc-options: -O

library
    import:           warnings, opts
    exposed-modules:  Hindsight.Store.Memory,
                      Hindsight.Store.Memory.Internal
    build-depends:    base >= 4.20.1 && < 5,
                      aeson >= 2.2.3 && < 2.3,
                      async >= 2.2.5 && < 2.3,
                      containers >= 0.7 && < 0.9,
                      hindsight-core >= 0.1.0 && < 0.2,
                      stm >= 2.5.3 && < 2.6,
                      text >= 2.1.2 && < 2.2,
                      time >= 1.12.2 && < 1.13,
                      unliftio >= 0.2.25 && < 0.3,
                      uuid >= 1.3.16 && < 1.4
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions: OverloadedRecordDot, DataKinds, DuplicateRecordFields, StrictData, Strict, RequiredTypeArguments

test-suite hindsight-memory-store-test
    import:           warnings, opts
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    ghc-options:      -threaded -rtsopts
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base,
        hindsight-memory-store,
        hindsight-core:store-testing,
        tasty
