cabal-version:      3.4
name:               hindsight-postgresql-store
version:            0.1.0.0
synopsis:           PostgreSQL event store for Hindsight
description:        Production-ready PostgreSQL backend with ACID guarantees and scalability. Event storage implementation only - projections are in hindsight-postgresql-projections.
license:            BSD-3-Clause
license-file:       ../LICENSE
author:             Gaël Deest
maintainer:         gael.deest@franbec.org
copyright:          (c) 2025 Gaël Deest
category:           Web
build-type:         Simple
extra-source-files: sql/sql-store-schema.sql

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -Wunused-packages

common opts
    ghc-options: -O

library
    import:           warnings, opts
    exposed-modules:  Hindsight.Store.PostgreSQL,
                      Hindsight.Store.PostgreSQL.Core.Schema,
                      Hindsight.Store.PostgreSQL.Events.Insertion,
                      Hindsight.Store.PostgreSQL.Events.Subscription,
                      Hindsight.Store.PostgreSQL.Events.Parsing,
                      Hindsight.Store.PostgreSQL.Events.Concurrency,
                      Hindsight.Store.PostgreSQL.Projections.Sync,
                      Hindsight.Store.PostgreSQL.Projections.State
    other-modules:    Hindsight.Store.PostgreSQL.Core.Types
    build-depends:    base >= 4.20.1 && < 5,
                      aeson >= 2.2.3 && < 2.3,
                      async >= 2.2.5 && < 2.3,
                      bytestring >= 0.12.2 && < 0.13,
                      containers >= 0.7 && < 0.9,
                      file-embed >= 0.0.16 && < 0.1,
                      hasql >= 1.9 && < 1.10,
                      hasql-notifications >= 0.2.4 && < 0.3,
                      hasql-pool >= 1.3.0 && < 1.4,
                      hasql-th >= 0.4.0 && < 0.5,
                      hasql-transaction >= 1.2 && < 1.3,
                      hindsight-core >= 0.1.0 && < 0.2,
                      hindsight-postgresql-projections >= 0.1.0 && < 0.2,
                      profunctors >= 5.6.3 && < 5.7,
                      random >= 1.2 && < 1.4,
                      stm >= 2.5.3 && < 2.6,
                      text >= 2.1.2 && < 2.2,
                      time >= 1.12.2 && < 1.13,
                      unliftio >= 0.2.25 && < 0.3,
                      uuid >= 1.3.16 && < 1.4,
                      vector >= 0.13.2 && < 0.14
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions: OverloadedRecordDot, DataKinds, DuplicateRecordFields, StrictData, Strict, RequiredTypeArguments

test-suite hindsight-postgresql-store-test
    import:           warnings, opts
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    ghc-options:      -threaded -rtsopts
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    Test.Hindsight.Store.PostgreSQL.VersionStress,
                      Test.Hindsight.Store.PostgreSQL.StreamHeadCorrectnessTest,
                      Test.Hindsight.Store.PostgreSQL.SyncProjectionTests,
                      Test.Hindsight.Store.PostgreSQL.SyncProjectionStateTests,
                      Test.Hindsight.SyncProjection,
                      Test.Hindsight.PostgreSQL.Temp
    build-depends:
        base,
        aeson,
        bytestring,
        containers,
        hasql,
        hasql-pool,
        hasql-transaction,
        hindsight-core,
        hindsight-postgresql-projections,
        hindsight-postgresql-store,
        hindsight-core:event-testing,
        hindsight-core:store-testing,
        random,
        tasty,
        tasty-hunit,
        text,
        time,
        tmp-postgres,
        unliftio,
        uuid
